[package]
name = "since-you-ask"
description = "A server returns your current IP address."
version = "0.1.0"
edition = "2021"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
homepage = "https://gitlab.com/grauwoelfchen/since-you-ask"
readme = "README.md"
repository = "https://gitlab.com/grauwoelfchen/since-you-ask"
categories = []
keywords = []
license = "MIT OR Apache-2.0"

exclude = [
  ".cargo-husky",
  "Makefile",
  "rust-toolchain",
  ".gitignore",
  ".clippy.toml",
  ".rustfmt.toml",
]

[badges]
gitlab = { repository = "grauwoelfchen/since-you-ask", branch = "trunk" }

[[bin]]
name = "since_you_ask"
path = "src/main.rs"

[dependencies]
async-std = "1.*"
serde_json = "1.*"

[dev-dependencies]
parking_lot = "*"
lazy_static = "*"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
